<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:id="@+id/card_battery">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_battery_35dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/battery" />



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:id="@+id/card_versionInfo"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_android_35dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/device_info" />


        </android.support.v7.widget.CardView>


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
       >


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="-10dp"
            android:id="@+id/card_network"
            android:layout_weight="0.5">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_mobile_data_35dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/networkk" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:id="@+id/card_memory"
            android:layout_marginBottom="-10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_memory_35dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/memory" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
     >


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/card_weather"
            android:layout_margin="10dp"
            android:layout_marginBottom="-10dp"
            android:layout_weight="0.5">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_weatherr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/weatherr" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:id="@+id/card_history"
            android:layout_marginBottom="-10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:paddingBottom="8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_23dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:layout_gravity="center"
                android:text="@string/history" />

        </android.support.v7.widget.CardView>


    </LinearLayout>


</LinearLayout>